# Maryland-Pull-Out-Device-Model-Prep

./: .gitignore  CITATION.cff  LICENSE  README.md  build-context.js  index.html  package-lock.json  package.json
.github/workflows/: release.yml
electron/: main.js
models/: README.md  TopAttachment.stl  TopPlate_Circle-Rotation.stl  TopPlate_Hex-Fixed.stl
models/3-screw/: BasePlate - 3 screw.stl  Template_BasePlate - 3 screw.blend
models/4-screw/: BasePlate - 4 screw.stl  Template_BasePlate - 4 screw.blend
src/: ViewCube.js  main.js  window-controls.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
